<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/bill_amount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/large"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:inputType="numberDecimal"
      android:hint="@string/bill_amount_hint"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <Button
      android:id="@+id/tip1_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@+id/tip2_button"
      android:layout_marginRight="@dimen/small"
      android:layout_alignBottom="@+id/tip2_button"
      android:text="@string/tip1_amount"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <Button
      android:id="@+id/tip2_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_centerHorizontal="true"
      android:text="@string/tip2_amount"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <Button
      android:id="@+id/tip3_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/tip2_button"
      android:layout_marginLeft="@dimen/small"
      android:layout_alignBottom="@+id/tip2_button"
      android:text="@string/tip3_amount"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:layout_marginLeft="@dimen/large"
      android:layout_marginRight="@dimen/large"
      android:layout_marginBottom="@dimen/large">

    <TextView
        android:id="@+id/tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_label"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/tip_label"
        android:layout_alignParentRight="true"
        android:text="@string/amount_default"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip_label"
        android:layout_alignLeft="@+id/tip_label"
        android:text="@string/total_label"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/total_label"
        android:layout_alignRight="@id/tip_amount"
        android:text="@string/amount_default"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

  </RelativeLayout>

</RelativeLayout>
